--- a/Stock-control/package.json
+++ b/Stock-control/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "Stock-control",
+    "name": "stock-control",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "script": {
+    "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
-        "lint": "eslint . --ext .ts"
+        "lint": "eslint . --ext .ts",
+        "start": "node ./dist/index.js"
     },
     "keywords": [],
     "author": "",
