--- a/Stock-control/package.json
+++ b/Stock-control/package.json
@@ -4,18 +4,31 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc",
-        "lint": "eslint . --ext .ts",
-        "start": "node ./dist/index.js"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "build": "tsc",
+      "lint": "eslint . --ext .ts",
+      "start": "node ./dist/index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^7.1.1",
-        "@typescript-eslint/parser": "^7.1.1",
-        "eslint": "^8.57.0",
-        "prettier": "^3.2.5"
+      "@typescript-eslint/eslint-plugin": "^7.1.1",
+      "@typescript-eslint/parser": "^7.1.1",
+      "eslint": "^8.57.0",
+      "prettier": "^3.2.5"
+    },
+    "eslintConfig": {
+      "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "ecmaVersion": 2021,
+        "sourceType": "module"
+      },
+      "env": {
+        "browser": true,
+        "node": true,
+        "es2021": true
+      }
     }
-}
+  }
