--- a/Stock-control/package.json
+++ b/Stock-control/package.json
@@ -1,34 +1,50 @@
 {
-    "name": "stock-control",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "build": "tsc",
-      "lint": "eslint . --ext .ts",
-      "start": "node ./dist/index.js"
+  "name": "stock-control",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "start": "node ./dist/index.js"
+  },
+  "dependencies": {
+    "dotenv": "16.4.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
+    "@typescript-eslint/eslint-plugin": "7.1.1",
+    "@typescript-eslint/parser": "7.1.1",
+    "@vitejs/plugin-react": "4.2.1",
+    "eslint": "8.57.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "prettier": "3.2.5",
+    "typescript": "5.2.2",
+    "vite": "5.1.6"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": 2021,
+      "sourceType": "module"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-      "@typescript-eslint/eslint-plugin": "^7.1.1",
-      "@typescript-eslint/parser": "^7.1.1",
-      "eslint": "^8.57.0",
-      "prettier": "^3.2.5"
-    },
-    "eslintConfig": {
-      "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
-      "parser": "@typescript-eslint/parser",
-      "parserOptions": {
-        "ecmaVersion": 2021,
-        "sourceType": "module"
-      },
-      "env": {
-        "browser": true,
-        "node": true,
-        "es2021": true
-      }
+    "env": {
+      "browser": true,
+      "node": true,
+      "es2021": true
     }
   }
+}
