--- a/Stock-control/package.json
+++ b/Stock-control/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:sass": "node-sass src/styles -o build/styles",
+    "watch:sass": "node-sass src/styles -o build/styles --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "node ./src/main.tsx"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
@@ -19,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.26",
@@ -31,6 +33,7 @@
     "eslint": "8.57.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
+    "node-sass": "^9.0.0",
     "prettier": "3.2.5",
     "typescript": "5.2.2",
     "vite": "5.1.6"
