--- a/Stock-control/package.json
+++ b/Stock-control/package.json
@@ -23,8 +23,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "sass": "^1.71.1",
-    "yup": "^1.4.0",
-    "sweetalert2": "^11.10.6"
+    "sweetalert2": "^11.10.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.26",
