--- a/Stock-control/package.json
+++ b/Stock-control/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.71.1",
     "sweetalert2": "^11.10.6",
     "yup": "^1.4.0"
@@ -30,6 +31,7 @@
     "@types/node": "^20.11.26",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
+    "@types/react-transition-group": "^4.4.10",
     "@typescript-eslint/eslint-plugin": "7.1.1",
     "@typescript-eslint/parser": "7.1.1",
     "@vitejs/plugin-react": "4.2.1",
@@ -38,7 +40,7 @@
     "eslint-plugin-react-refresh": "0.4.5",
     "node-sass": "^9.0.0",
     "prettier": "3.2.5",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "vite": "5.1.6"
   },
   "eslintConfig": {
