--- a/Stock-control/package.json
+++ b/Stock-control/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/yup": "^0.32.0",
     "dotenv": "16.4.5",
@@ -20,6 +21,7 @@
     "icecat": "^1.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-transition-group": "^4.4.5",
