--- a/Stock-control/tsconfig.json
+++ b/Stock-control/tsconfig.json
@@ -16,6 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "outDir": "stock-control/dist",
+    "rootDir": "./src",
 
     /* Linting */
     "strict": true,
