--- a/Stock-control/package.json
+++ b/Stock-control/package.json
@@ -14,14 +14,17 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@leecheuk/react-google-login": "^5.4.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/yup": "^0.32.0",
+    "axios": "^1.6.8",
     "dotenv": "16.4.5",
     "formik": "^2.4.5",
+    "google-auth-library": "^9.7.0",
     "icecat": "^1.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-google-login": "^5.2.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-transition-group": "^4.4.5",
